<?xml version="1.0" encoding="UTF-8"?>
<!-- Maven project configuration file -->

<project>
    <!-- Maven properties -->
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.ird</groupId>
    <artifactId>osmose</artifactId>
    <version>4.2.3</version>
    <packaging>jar</packaging>
    <name>Osmose Stable 4</name>
    <description></description>
    
    <!-- Project properties -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <mainClass>fr.ird.osmose.Osmose</mainClass>
    </properties>
    
    <!-- Libraries declarations -->
    <dependencies>
        <!-- OpenCSV -->
        <dependency>
            <groupId>au.com.bytecode</groupId>
            <artifactId>opencsv</artifactId>
            <version>2.4</version>
        </dependency>

        <!-- NetCDF -->
        <dependency>
            <groupId>edu.ucar</groupId>
            <artifactId>netcdfAll</artifactId>
            <version>4.6.6</version>
        </dependency>

        <!-- Commons-Math3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>

        <!-- Options -->
        <dependency>
            <groupId>ml.options</groupId>
            <artifactId>options</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

    <!-- Address to the libraries repositories -->
    <repositories>
        <!-- Default Maven repository -->
        <repository>
            <id>default</id>
            <url>http://repo.maven.apache.org/maven2/</url>
        </repository>
        
        <!-- Local repository -->
        <repository>
            <id>project.local</id>
            <name>project</name>
            <url>file:${project.basedir}/local/</url>
        </repository>
        
        <!-- NetCDF releases repository -->
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>amap-maven-central</id>
            <name>libs-release</name>
            <url>https://artifacts.unidata.ucar.edu/repository/unidata-releases/</url>
        </repository>
        
        <!-- NetCDF snapshots repository -->
        <repository>
            <id>amap-maven-snapshots</id>
            <name>libs-snapshot</name>
            <url>https://artifacts.unidata.ucar.edu/repository/unidata-snapshots/</url>
        </repository>
    </repositories>
    
    <build>
        <plugins>
            <!-- Execute the jar file on "Run Project" -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <goals>
                            <goal>exec</goal>                            
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/java</executable>
                            <commandlineArgs>-classpath "${project.build.directory}/lib" -jar "${project.build.directory}/${project.build.finalName}.jar"</commandlineArgs>
                        </configuration>
                    </execution>
                </executions>  
            </plugin>
            
            <!-- Copy dependencies in lib folder -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <excludeScope>system</excludeScope>
                            <excludeGroupIds>junit,org.hamcrest</excludeGroupIds>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- Link the jar with the dependencies in libs folder -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>${mainClass}</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            
            <!-- Create a jar with dependencies inside -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <addClasspath>true</addClasspath>
                                    <classpathPrefix>lib/</classpathPrefix>
                                    <mainClass>${mainClass}</mainClass>
                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- Create a ".exe" file -->
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>1.7.25</version>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>${project.build.directory}/${project.build.finalName}.exe</outfile>
                            <jar>${project.build.directory}/${project.build.finalName}.jar</jar>
                            <errTitle>encc</errTitle>
                            <classPath>
                                <mainClass>${mainClass}</mainClass>
                                <addDependencies>true</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <jre>
                                <minVersion>${maven.compiler.source}.0</minVersion>
                                <opts>
                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>${maven.compiler.source}.0.0</fileVersion>
                                <txtFileVersion>${maven.compiler.source}</txtFileVersion>
                                <fileDescription>${project.name}</fileDescription>
                                <copyright>CeCILL-B</copyright>
                                <productVersion>${maven.compiler.source}.0.0</productVersion>
                                <txtProductVersion>${maven.compiler.source}</txtProductVersion>
                                <productName>${project.build.finalName}</productName>
                                <originalFilename>${project.build.finalName}.exe</originalFilename>
                                <!-- internalName is mandatory -->
                                <internalName>${project.build.finalName}</internalName>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>